# Programming-c-lang-helper-for-linux

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: c_base.h  chapters.h  code_source_view.h  content.h  global_funcs.h  theme_list.h
resources/: main.css
src/: c_base.c  c_base_gtk4.c  chapters.c  chapters_gtk4.c  code_source_view.c  content.c  global_funcs.c  main.c  main_gtk4.c  resources.xml  theme_list.c
